src/index.css
/*Variables para medias*/
@media all and (min-width: 768px) {
  .sticky {
    background-color: #336287;
    padding: 15px 0;
    width: 100%;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    transition: background-color ease-in-out .5s; }
    .hidden .sticky {
      background-color: none; } }

.footer {
  background-color: #3e4049;
  padding-top: 40px;
  padding-bottom: 40px;
  text-align: center; }

.icons-footer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center; }
  @media all and (min-width: 768px) {
    .icons-footer {
      flex-direction: row;
      justify-content: center; } }

.footer-star {
  fill: #fff;
  margin-bottom: 20px; }
  @media all and (min-width: 768px) {
    .footer-star {
      margin-bottom: 0; } }

.footer-star-desktop {
  display: none;
  fill: #fff; }
  @media all and (min-width: 768px) {
    .footer-star-desktop {
      display: inline; } }

.icon-marker-footer {
  fill: #fff;
  margin-left: 20px;
  margin-right: 20px; }
  @media all and (min-width: 768px) {
    .icon-marker-footer {
      width: 2.5em;
      height: 2.5em; } }

.map {
  height: 400px;
  width: 400px; }

.hero {
  background-image: url("/images/hero-image.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 120px 60px; }
  @media all and (min-width: 1024px) {
    .hero {
      padding-top: 36px;
      height: 460px;
      background-position: top bottom; } }

.section-cards {
  background-color: #e1e8ed;
  padding-top: 40px; }

.container-cards {
  display: grid;
  justify-content: center;
  grid-template-columns: 1fr; }
  @media all and (min-width: 768px) {
    .container-cards {
      grid-template-columns: 350px 350px;
      grid-column-gap: 10px;
      grid-row-gap: 10px; } }
  @media all and (min-width: 1024px) {
    .container-cards {
      grid-template-columns: 350px 350px 350px; } }

.card {
  background-color: #fff;
  border-top: 2px solid #336287;
  padding: 30px 0 60px 12px;
  flex-direction: column;
  height: 230px;
  cursor: pointer;
  transition: transform .5s; }
  @media all and (min-width: 768px) {
    .card {
      border-top: 0px;
      box-shadow: 4px 6px 8px 1px rgba(0, 0, 0, 0.19); } }
  .card::after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: opacity 2s cubic-bezier(0.165, 0.84, 0.44, 1);
    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 1, 0.75);
    content: '';
    opacity: 0;
    z-index: -1; }
  .card:hover, .card:focus {
    transform: scale3d(1.006, 1.006, 1); }
    .card:hover::after, .card:focus::after {
      opacity: 1; }

.active-card {
  background-color: #336287;
  color: #fff; }

.number-bus {
  padding: 1px 8px 8px 8px;
  border-radius: 3px;
  align-self: flex-start;
  margin-bottom: 10px;
  margin-left: 1.5%;
  color: #fff;
  background-color: #336287; }
  @media all and (min-width: 768px) {
    .number-bus {
      font-size: 20px; } }
  @media all and (min-width: 1024px) {
    .number-bus {
      font-size: 28px; } }

.active-number-line {
  background-color: #fff;
  color: #336287; }

@media all and (max-width: 768px) {
  #columnMobile {
    flex-direction: column; } }

.classColumn {
  flex-direction: column; }

.flexWrap {
  flex-wrap: wrap; }

.icon-bus {
  width: 15px;
  align-self: flex-start; }

.box-data-card {
  margin-left: 10px;
  margin-bottom: 30px; }

.box-icon-card {
  align-self: center; }

.border-bottom-card {
  border-bottom: 2px solid #336287; }
  @media all and (min-width: 768px) {
    .border-bottom-card {
      border-bottom: 0px; } }

.section-title {
  margin-left: 12px; }
  @media all and (min-width: 768px) {
    .section-title {
      margin-left: 30px; } }
  @media all and (min-width: 1024px) {
    .section-title {
      margin-left: 130px; } }
  @media all and (min-width: 1150px) {
    .section-title {
      margin-left: 0;
      text-align: center; } }

.data-title {
  width: 90%;
  font-size: 10px;
  margin-right: 0; }

.box-numbers {
  flex-direction: row; }

.list-pagination {
  display: flex;
  padding-left: 0;
  justify-content: center;
  margin: 30px 0 0 0; }

.number-pagination {
  padding: 8px 16px;
  background-color: #e0634b;
  border: 1px solid #e0634b;
  transition: background-color .3s;
  border-right: 1px solid #fff; }
  .number-pagination:hover {
    background-color: #373d42;
    border: 1px solid #e0634b; }

.active {
  background-color: #373d42;
  border: 1px solid #e0634b; }

.box-goUp {
  padding-top: 65px;
  padding-bottom: 65px;
  background-color: #e1e8ed;
  text-align: center; }

.link-goUp {
  color: #e0634b;
  text-decoration: underline;
  font-size: 18px;
  font-weight: 600; }

body {
  font-family: "Raleway", sans-serif;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #373d42;
  -webkit-font-smoothing: antialiased; }

.menu-link {
  font-size: 18px;
  font-weight: 600;
  color: #fff; }

.hero-title {
  font-family: "Playfair Display", serif;
  font-size: 46px;
  color: #fff;
  font-weight: 700; }
  @media all and (min-width: 1024px) {
    .hero-title {
      font-size: 54px; } }

.hero-subtitle {
  font-size: 16px;
  color: #fff;
  font-weight: 500;
  font-style: italic; }
  @media all and (min-width: 1024px) {
    .hero-subtitle {
      font-size: 28px; } }

.sticky-title {
  font-family: "Playfair Display", serif;
  font-size: 18px;
  color: #fff;
  font-weight: 700; }

.sticky-subtitle {
  font-size: 16px;
  color: #fff;
  font-weight: 500;
  font-style: italic; }

.introduction-title {
  font-size: 18px;
  color: #000; }

.introduction-body {
  color: #000;
  font-weight: 300; }

.introduction-text-search {
  font-size: 12px;
  color: #e0634b; }

.section-title-font {
  font-family: "Playfair Display", serif;
  font-size: 28px;
  color: #336287;
  font-weight: 700; }

.data-title {
  font-size: 14px;
  font-weight: 700; }
  @media all and (min-width: 1024px) {
    .data-title {
      font-size: 18px; } }

.data-medium {
  font-size: 14px;
  font-weight: 500;
  margin-top: 2px;
  margin-bottom: 0; }
  @media all and (min-width: 768px) {
    .data-medium {
      font-size: 16px; } }
  @media all and (min-width: 1024px) {
    .data-medium {
      font-size: 18px; } }

.number-card-font {
  font-family: "Playfair Display", serif;
  font-size: 16px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal; }
  @media all and (min-width: 768px) {
    .number-card-font {
      font-size: 18px; } }
  @media all and (min-width: 1024px) {
    .number-card-font {
      font-size: 20px; } }

.footer-font {
  color: #fff;
  font-size: 18px; }

.body-light {
  font-size: 18px;
  font-weight: 500;
  color: #fff; }

.body-primary {
  font-size: 18px;
  font-weight: 600;
  color: #e0634b; }

.center {
  text-align: center; }

.left {
  text-align: left; }

.right {
  text-align: right; }

.uppercase {
  text-transform: uppercase; }

.capitalize {
  text-transform: capitalize; }

.button-light-font {
  font-size: 12px;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase; }

.button-primary-font {
  font-size: 12px;
  font-weight: 600;
  color: #e0634b;
  text-transform: uppercase; }

.button-dark-font {
  font-size: 12px;
  font-weight: 600;
  color: #373d42;
  text-transform: uppercase; }

.main-button {
  width: 80px;
  background-color: #e0634b;
  border: 1px solid #e0634b;
  border-radius: 3px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color ease-in-out 0.7s, border ease-in-out 0.7s; }
  .main-button:hover {
    background-color: #373d42;
    border: 1px solid #e0634b; }
  .main-button:active {
    background-color: #373d42;
    border: 1px solid #e0634b; }

.icon {
  display: inline-block;
  width: 2em;
  height: 2em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor; }

.icon-bus {
  width: 0.857421875em; }

.arrow-down {
  fill: #fff;
  cursor: pointer;
  right: 44%;
  position: absolute;
  bottom: 20px;
  animation-name: scroll;
  animation-duration: 2s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite; }
  @media all and (min-width: 1024px) {
    .arrow-down {
      display: none; } }

@keyframes scroll {
  0% {
    bottom: 20px; }
  50% {
    bottom: 25px; }
  100% {
    bottom: 20px; } }

.marker-icon-intro {
  fill: #e0634b; }
  @media all and (min-width: 1024px) {
    .marker-icon-intro {
      display: none; } }

.bus-marker-map {
  width: 1.5em;
  height: 1.5em;
  fill: #e0634b; }

.bus-card {
  width: 1em;
  height: 1em;
  margin-right: 5px;
  fill: #336287; }

.active-bus {
  fill: #fff; }

.spinner-style {
  display: flex;
  justify-content: center;
  align-items: center; }

.hamburguer {
  fill: #fff;
  width: 30px;
  height: 30px;
  position: absolute;
  top: 10px;
  left: 10px;
  z-index: 2;
  align-content: center;
  display: flex;
  justify-content: center;
  cursor: pointer;
  padding: 0; }

.menu-display {
  background-color: transparent;
  transition: background-color ease-in-out 2s; }

.background-menu {
  background-color: #e0634b;
  height: 100vh;
  position: fixed;
  width: 276px;
  left: -100%;
  transition: left ease 2s; }
  .menu-visible .background-menu {
    left: 0;
    z-index: 3; }

.menu-visible {
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  height: 100vh;
  width: 100%;
  z-index: 2; }

.close-button {
  fill: #fff;
  width: 30px;
  height: 30px;
  margin-top: 50px;
  cursor: pointer; }

.button-style {
  padding: 0;
  border: 0;
  border-radius: 0;
  outline: none;
  background-color: none; }

.list-style {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; }

.background-menu-link {
  margin: 15px 0px;
  cursor: pointer; }

.intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 15px;
  padding-right: 15px; }

.marker-icon-intro {
  width: 30px;
  height: 38px;
  margin-top: 16px;
  margin-bottom: 6px; }
  @media all and (min-width: 1024px) {
    .marker-icon-intro {
      display: none; } }

.active-marker {
  fill: #336287;
  width: 3.5em;
  height: 3.5em; }

.home-title {
  margin: 0; }
  @media all and (min-width: 1024px) {
    .home-title {
      margin-top: 48px; } }

.home-text {
  margin-top: 0;
  margin-bottom: 50px; }

.home-menu-buttons {
  display: flex;
  flex-direction: column;
  align-items: center; }
  @media all and (min-width: 1024px) {
    .home-menu-buttons {
      flex-direction: row; } }

.home-button {
  width: 200px;
  height: 36px;
  margin-bottom: 10px; }
  @media all and (min-width: 1024px) {
    .home-button {
      width: 170px;
      margin-left: 20px; } }

.map {
  width: 100%;
  height: 400px;
  margin-top: 70px; }
  @media all and (min-width: 1024px) {
    .map {
      width: 70%;
      margin: 70px auto; } }

.map-text-search {
  width: 143px;
  height: 14px;
  display: inline; }

.hidden {
  display: none; }

.visible {
  display: block; }

.flex {
  display: flex; }

.m-top-none {
  margin-top: 0; }

.m-none {
  margin: 0; }

.no-margin {
  margin: 0; }

.margin-title {
  margin-bottom: 10px; }

.padding-subtitle {
  padding: 0 15px; }

.fixed {
  position: fixed; }

.no-style-button {
  border: none;
  background-color: transparent; }

.no-style-button button:active, button:focus {
  outline: none; }

* {
  box-sizing: border-box; }

body, html {
  height: 100vh;
  margin: 0; }

a {
  text-decoration: none; }

html {
  scroll-behavior: smooth; }

ul {
  list-style: none;
  padding-left: 0; }

.hidden {
  display: none; }

li {
  list-style-type: none; }

